# finetuning-sample-llm

./: .gitignore  Makefile  README.md  pyproject.toml
backends/: __init__.py  base.py
backends/hf/: sft.py
backends/mlx/: sft.py
configs/datasets/: sample.yaml
configs/models/: deepseek.yaml  gemma.yaml  kimi.yaml  llama.yaml  qwen.yaml  tinyllama.yaml
configs/techniques/: full.yaml  lora.yaml  qlora.yaml
core/: __init__.py  auth.py  config.py  data.py  hardware.py
data/samples/: sample_chat.jsonl
docs/: concepts.md  hardware.md
families/deepseek/: README.md
families/gemma/: README.md
families/kimi/: README.md
families/llama/: README.md
families/qwen/: README.md  example.py
outputs/: .gitkeep
scripts/: detect_hardware.py  train.py
techniques/: __init__.py  sft.py
tests/: test_smoke.py
